# mina-REPL-skill

./: .gitignore  README.md  SKILL.md  best_practices.yaml  contracts.yaml  manifest.yaml  pyproject.toml  sources.yaml
agents/: openai.yaml
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  INTEGRATION_GUIDE.md  SOURCE_CATALOG.md
examples/: integration_snippet.py  sample_transcript.md
references/: repl-approval-and-autonomy.md  repl-architecture.md  repl-context-engineering.md  repl-design-opencode.md  repl-discovery-and-workspace-awareness.md  repl-extension-points.md  repl-failure-and-recovery.md  repl-llm-logging-and-observability.md  repl-maturity-matrix.md  repl-mcp-and-tool-registry.md  repl-memory-and-model-config.md  repl-orchestrator-guidance.md  repl-plan-build-modes.md  repl-plan-execution.md  repl-project-root-and-repo-scouting.md  repl-prompt-composition.md  repl-prompt-templates.md  repl-runtime-contract.md  repl-session-lifecycle.md  repl-source-baseline.md  repl-source-traceability.md  repl-subsystem-map-codex.md  repl-subsystem-map-opencode.md  repl-terminal-ui-best-practices.md  repl-three-surface-ux.md  repl-token-budgeting-and-context-window-control.md  repl-tool-loop-and-turn-orchestration.md  repl-tool-selection-and-usage.md  repl-verification-and-evaluation.md
src/mina_repl_core/: __init__.py  __main__.py  demo.py  manifest.py  models.py  session.py  shell.py  transcript.py
tests/: _support.py  test_assets.py  test_manifest.py  test_session.py  test_shell.py  test_skill_layout.py  test_transcript.py
tools/: sync_skill_assets.py
(+5 files in other folders)
